--- a/templates/code-of-conduct.html
+++ b/templates/code-of-conduct.html
@@ -37,13 +37,13 @@
       <p>{{ content.long.participants.content }}</p>
 
       <h4>{{ content.long.staff.title }}</h4>
-      <p>{{ content.long.staff.content }}</p>
+      <p>{{ content.long.staff.infos }}</p>
 
       <h4>{{ content.long.venue.title }}</h4>
       <p>{{ content.long.venue.content }}</p>
 
-      <h4>{{ content.licence.venue.title }}</h4>
-      <p>{{ content.licence.venue.content }}</p>
+      <h4>{{ content.licence.title }}</h4>
+      <p>{{ content.licence.content }}</p>
     </div> 
   </section>
 
