--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -1,6 +1,6 @@
 a {
   @include font-size($large + 6);
-  padding: 0 $gutter/2;
+  padding: 0 $gutter/2 + 5px;
   @include tooltip;
   @include transition(all, 0.2s, ease);
   &:first-child {
