--- a/templates/code-of-conduct.html
+++ b/templates/code-of-conduct.html
@@ -37,7 +37,7 @@
       <p>{{ content.long.participants.content }}</p>
 
       <h4>{{ content.long.staff.title }}</h4>
-      <p>{{ content.long.staff.infos }}</p>
+      <p>{{ content.long.staff.content.name }}<br/> <a href='mailto:{{ content.long.staff.content.mail }}'>{{ content.long.staff.content.mail }}</a> <br/>{{ content.long.staff.content.tel }}</p>
 
       <h4>{{ content.long.venue.title }}</h4>
       <p>{{ content.long.venue.content }}</p>
