--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -154,6 +154,8 @@ dfn {
  */
 
 hr {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
@@ -355,6 +357,8 @@ html input[disabled] {
 
 input[type="checkbox"],
 input[type="radio"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -371,6 +375,8 @@ input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   /* 2 */
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
@@ -511,6 +517,8 @@ input[type="password"]:after,
 .border-box,
 .border-box:before,
 .border-box:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -521,39 +529,47 @@ input[type="password"]:after,
 */
 
 .bg-cv {
+  -webkit-background-size: cover;
   background-size: cover;
 }
 
 .bg-cn {
+  -webkit-background-size: contain;
   background-size: contain;
 }
 
 @media screen and (min-width: 42em) {
   .bg-cv-ns {
+    -webkit-background-size: cover;
     background-size: cover;
   }
 
   .bg-cn-ns {
+    -webkit-background-size: contain;
     background-size: contain;
   }
 }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .bg-cv-m {
+    -webkit-background-size: cover;
     background-size: cover;
   }
 
   .bg-cn-m {
+    -webkit-background-size: contain;
     background-size: contain;
   }
 }
 
 @media screen and (min-width: 64em) {
   .bg-cv-l {
+    -webkit-background-size: cover;
     background-size: cover;
   }
 
   .bg-cn-l {
+    -webkit-background-size: contain;
     background-size: contain;
   }
 }
@@ -1360,18 +1376,21 @@ input[type="password"]:after,
   letter-spacing: .15em;
   text-decoration: none;
   text-transform: uppercase;
+  -webkit-transition: color .4s, background-color .4s, border .4s;
   transition: color .4s, background-color .4s, border .4s;
 }
 
 .btn:hover {
   color: #7FDBFF;
   border: 1px solid #7FDBFF;
+  -webkit-transition: background-color .3s, color .3s, border .3s;
   transition: background-color .3s, color .3s, border .3s;
 }
 
 .btn:active {
   color: #0074D9;
   border: 1px solid #0074D9;
+  -webkit-transition: background-color .3s, color .3s, border .3s;
   transition: background-color .3s, color .3s, border .3s;
 }
 
@@ -1553,7 +1572,9 @@ input[type="password"]:after,
   color: #444;
   border: 4px solid #f1f1f1;
   padding: .5rem;
+  -webkit-transition: padding .4s ease-out;
   transition: padding .4s ease-out;
+  -webkit-transition-delay: .1s;
   transition-delay: .1s;
 }
 
@@ -1561,6 +1582,7 @@ input[type="password"]:after,
   background: #f9f9f9;
   border: 4px solid #f1f1f1;
   padding: .75rem;
+  -webkit-transition: padding .2s ease-in;
   transition: padding .2s ease-in;
 }
 
@@ -2609,27 +2631,32 @@ img {
 
 .link {
   text-decoration: none;
+  -webkit-transition: color .15s ease-in;
   transition: color .15s ease-in;
 }
 
 .link:link,
 .link:visited {
   color: #2D243B;
+  -webkit-transition: color .15s ease-in;
   transition: color .15s ease-in;
 }
 
 .link:hover {
   color: #999999;
+  -webkit-transition: color .15s ease-in;
   transition: color .15s ease-in;
 }
 
 .link:active {
   color: #C4E3E0;
+  -webkit-transition: color .15s ease-in;
   transition: color .15s ease-in;
 }
 
 .link:focus {
   color: #2D243B;
+  -webkit-transition: color .15s ease-in;
   transition: color .15s ease-in;
 }
 
@@ -5189,17 +5216,20 @@ img {
 
 .dim {
   opacity: 1;
+  -webkit-transition: opacity .15s ease-in;
   transition: opacity .15s ease-in;
 }
 
 .dim:hover {
   opacity: .6;
+  -webkit-transition: opacity .15s ease-in;
   transition: opacity .15s ease-in;
 }
 
 .dim:active,
 .dim:focus {
   opacity: .8;
+  -webkit-transition: opacity .15s ease-out;
   transition: opacity .15s ease-out;
 }
 
