--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* BASIC */
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -24,6 +25,27 @@ ul {
   background: #3395FF;
   border-radius: 20px;
 }
+
+/* Font */
+
+@font-face {
+  font-family: 'icons';
+  src: url('./fonts/icons.eot');
+  src: url('./fonts/icons.eot?#iefix') format('embedded-opentype'), url('./fonts/icons.woff') format('woff'), url('./fonts/icons.ttf') format('truetype'), url('./fonts/icons.svg#Icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.header .menu .option a.social:before {
+  font-family: 'icons';
+  font-variant: normal;
+  font-weight: normal;
+  speak: none;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Utility */
 
 .header .menu ul:after {
   content: "";
@@ -66,8 +88,8 @@ ul {
 
 .header .menu {
   background: #fff;
-  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
   bottom: 0px;
   color: #333;
   padding: 10px 0px;
@@ -77,9 +99,22 @@ ul {
   text-align: center;
 }
 
+.header .menu.fixed {
+  bottom: auto;
+  position: fixed;
+  top: 0px;
+}
+
 .header .menu ul {
   display: block;
   text-align: center;
+}
+
+@media screen and (min-width: 1174px) {
+  .header .menu ul {
+    margin: 0 auto;
+    width: 1174px;
+  }
 }
 
 .header .menu ul li {
@@ -90,7 +125,7 @@ ul {
   display: block;
   height: 50px;
   font-size: 0.9rem;
-  line-height: 50px;
+  line-height: 54px;
   width: 120px;
 }
 
@@ -99,4 +134,94 @@ ul {
   padding: 2px 3px;
   height: 30px;
   line-height: 30px;
+}
+
+.header .menu .option {
+  float: right;
+  height: 100%;
+  margin-right: 30px;
+  text-align: center;
+  width: 100%;
+}
+
+@media screen and (min-width: 1174px) {
+  .header .menu .option {
+    position: absolute;
+    right: 0px;
+    top: 9px;
+    width: auto;
+  }
+}
+
+.header .menu .option a {
+  display: inline-block;
+  font-size: 1.3rem;
+  height: 50px;
+  line-height: 50px;
+  margin-left: 25px;
+}
+
+.header .menu .option a.social {
+  position: relative;
+}
+
+.header .menu .option a.social.weibo:before {
+  content: 'w';
+}
+
+.header .menu .option a.social.twitter:before {
+  content: 't';
+}
+
+.header .menu .option a.social.github:before {
+  content: 'g';
+}
+
+.header .menu .option a.social span {
+  background: #3395FF;
+  border-radius: 2px;
+  bottom: 90%;
+  color: #FFF;
+  font-size: 14px;
+  left: 50%;
+  line-height: 140%;
+  opacity: 0;
+  padding: 7.5px 15px;
+  position: absolute;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition-property: opacity, margin;
+  transition-property: opacity, margin;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  visibility: hidden;
+  white-space: nowrap;
+  width: auto;
+  z-index: 999;
+}
+
+.header .menu .option a.social span:after {
+  content: '';
+  border-right: 5px solid transparent;
+  border-bottom-color: #3395FF;
+  border-top: 5px solid #3395FF;
+  border-left: 5px solid transparent;
+  bottom: -5px;
+  left: 50%;
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.header .menu .option a.social:hover {
+  color: #3395FF;
+}
+
+.header .menu .option a.social:hover span {
+  margin-bottom: 8px;
+  opacity: 1;
+  visibility: visible;
 }
