--- a/src/basic.scss
+++ b/src/basic.scss
@@ -3,6 +3,7 @@ $blue: #3395FF;
 html{
 }
 a{
+  color: inherit;
   text-decoration: none;
 }
 ul{
@@ -23,6 +24,29 @@ ul{
     border-radius: 20px;
   }
 }
+
+/* Font */
+$icons : './fonts/';
+@font-face {
+  font-family: 'icons';
+  src:url($icons + 'icons.eot');
+  src:url($icons + 'icons.eot?#iefix') format('embedded-opentype'),
+    url($icons + 'icons.woff') format('woff'),
+    url($icons + 'icons.ttf') format('truetype'),
+    url($icons + 'icons.svg#Icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+%icon {
+  font-family: 'icons';
+  font-variant: normal;
+  font-weight: normal;
+  speak: none;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Utility */
 %clearFix {
   &:after {
     content: "";
